# libmuonpi

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: check-clang-format.yml  clang-tidy-ci.yml  dev-ci.yml
cmake/: files.cmake  macros.cmake  packaging.cmake  version.cmake
cmake/targets/: core.cmake  detector.cmake  http.cmake  link.cmake
config/: changelog-core  changelog-detector  changelog-http  changelog-link  changelog-mqtt  changelog-rest  config.h  copyright
examples/: CMakeLists.txt
examples/config/: CMakeLists.txt
examples/config/config/: example.cfg
examples/config/src/: main.cpp
examples/gpiod/: CMakeLists.txt
examples/gpiod/src/: main.cpp
examples/http/: CMakeLists.txt
examples/http-request/: CMakeLists.txt
examples/http-request/src/: main.cpp
examples/http/src/: main.cpp
examples/i2c/: CMakeLists.txt
examples/i2c/src/: main.cpp
examples/influx/: CMakeLists.txt
examples/influx/src/: main.cpp
examples/log/: CMakeLists.txt
examples/log/src/: main.cpp
examples/mqtt/: CMakeLists.txt
examples/mqtt/src/: main.cpp
examples/rest/: CMakeLists.txt
examples/rest/src/: main.cpp
examples/spi/: CMakeLists.txt
examples/spi/src/: main.cpp
include/muonpi/: addressrange.h  base64.h  concepts.h  configuration.h  detector.h  exceptions.h  fixedaddress.h  global.h  gnss.h  gpio_handler.h  http_request.h  http_response.h  http_server.h  http_tools.h  log.h  multiaddressrange.h  range.h  restservice.h  scopeguard.h  threadrunner.h  types.h  units.h  utility.h  websocket_server.h
include/muonpi/analysis/: cachedvalue.h  dataseries.h  histogram.h  ratemeasurement.h  uppermatrix.h
include/muonpi/link/: influx.h  mqtt.h
include/muonpi/pipeline/: base.h
include/muonpi/serial/: i2cbus.h  i2cdefinitions.h  i2cdevice.h  i2cdevices.h  i2ceeprom.h  spidevice.h
include/muonpi/serial/i2cdevices/: ads1115.h  ads1x_adc.h  eeprom24aa02.h  eeproms.h  generalcall.h  generic_eeprom.h  hmc5883.h  io_extender.h  lm75.h  mcp4728.h  mic184.h  pca9536.h  pca9554.h  pca95xx.h
include/muonpi/sink/: base.h
include/muonpi/source/: base.h
include/muonpi/supervision/: resource.h
src/: configuration.cpp  detector.cpp  exceptions.cpp  gpio_handler.cpp  http_request.cpp  http_response.cpp  http_server.cpp  http_tools.cpp  log.cpp  restservice.cpp  scopeguard.cpp  threadrunner.cpp  utility.cpp  websocket_server.cpp
src/detail/: http_session.hpp
src/link/: influx.cpp  mqtt.cpp
src/serial/: i2cbus.cpp  i2cdevice.cpp  spidevice.cpp
src/serial/i2cdevices/: ads1115.cpp  eeprom24aa02.cpp  generalcall.cpp  hmc5883.cpp  lm75.cpp  mcp4728.cpp  mic184.cpp  pca9536.cpp  pca9554.cpp  pca95xx.cpp
src/supervision/: resource.cpp
tests/: CMakeLists.txt  core.cpp
tests/core/: base64.cpp  dataseries.cpp  main.cpp  ratemeasurement.cpp  threadrunner.cpp  utilities.cpp  utility.cpp
tests/detector/: gpio.cpp  main.cpp
tests/hardware/: gpio.cpp  i2c.cpp
tests/http/: main.cpp
tests/link/: main.cpp
